git-svn-id: svn://svn.r-forge.r-project.org/svnroot/qtools@19 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/NEWS
+++ b/pkg/NEWS
@@ -2,9 +2,9 @@ Changes in Qtools
 
 =============================================
 
-Version 1.0 (May 20, 2015)
+Version 1.0 (September 20, 2015)
 
-- Package Qtools on R-Forge
+- Package Qtools on CRAN
 
 =============================================
 
